--- a/package.json
+++ b/package.json
@@ -10,16 +10,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0-0",
+    "@babel/plugin-transform-arrow-functions": "^7.0.0-0",
+    "@babel/plugin-transform-shorthand-properties": "^7.0.0-0",
+    "@babel/plugin-transform-template-literals": "^7.0.0-0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-community/netinfo": "^9.3.10",
+    "@react-native-firebase/app": "^18.1.0",
+    "@react-native-firebase/auth": "^18.1.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "@types/firebase": "^3.2.1",
+    "dotenv": "^16.3.1",
     "firebase": "^9.23.0",
     "firebase-admin": "^11.9.0",
+    "lottie-ios": "3.4.0",
     "lottie-react-native": "^5.1.6",
+    "npm": "^9.7.2",
     "react": "18.2.0",
     "react-native": "0.72.0",
     "react-native-gesture-handler": "^2.12.0",
